// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App screen correctly render App screen correctly render 1`] = `
<section
  className="welcome"
>
  <div
    className="welcome__logo"
  >
    <img
      alt="Угадай мелодию"
      height="83"
      src="img/melody-logo.png"
      width="186"
    />
  </div>
  <button
    className="welcome__button"
    onClick={[Function]}
  >
    <span
      className="visually-hidden"
    >
      Начать игру
    </span>
  </button>
  <h2
    className="welcome__rules-title"
  >
    Правила игры
  </h2>
  <p
    className="welcome__text"
  >
    Правила просты:
  </p>
  <ul
    className="welcome__rules-list"
  >
    <li>
      Нужно ответить на все вопросы.
    </li>
    <li>
      Можно допустить 
      0
       ошибок.
    </li>
  </ul>
  <p
    className="welcome__text"
  >
    Удачи!
  </p>
</section>
`;

exports[`App screen correctly render App screen with authorization correctly render 1`] = `
<form
  action=""
  className="login__form"
>
  <p
    className="login__field"
  >
    <label
      className="login__label"
      htmlFor="name"
    >
      Логин
    </label>
    <input
      className="login__input"
      id="name"
      name="name"
      type="text"
    />
  </p>
  <p
    className="login__field"
  >
    <label
      className="login__label"
      htmlFor="password"
    >
      Пароль
    </label>
    <input
      className="login__input"
      id="password"
      name="password"
      type="password"
    />
    <span
      className="login__error"
    >
      Неверный пароль
    </span>
  </p>
  <button
    className="login__button button"
    onClick={[Function]}
    type="submit"
  >
    Войти
  </button>
</form>
`;

exports[`App screen correctly render App screen with lose correctly render 1`] = `
<section
  className="result"
>
  <div
    className="result__logo"
  >
    <img
      alt="Угадай мелодию"
      height="83"
      src="img/melody-logo.png"
      width="186"
    />
  </div>
  <h2
    className="result__title"
  >
    Какая жалость!
  </h2>
  <p
    className="result__total result__total--fail"
  >
    У вас закончились все попытки. Ничего, повезёт в следующий раз!
  </p>
  <button
    className="replay"
    onClick={[Function]}
    type="button"
  >
    Попробовать ещё раз
  </button>
</section>
`;

exports[`App screen correctly render App screen with win correctly render 1`] = `
<section
  className="result"
>
  <div
    className="result__logo"
  >
    <img
      alt="Угадай мелодию"
      height="83"
      src="img/melody-logo.png"
      width="186"
    />
  </div>
  <h2
    className="result__title"
  >
    Ура победа!
  </h2>
  <p
    className="result__total result__total--fail"
  >
    Вы ответили на все вопросы, сделав всего 
    0
     шибок из допустимых 
    0
    !
  </p>
  <button
    className="replay"
    onClick={[Function]}
    type="button"
  >
    Попробовать ещё раз
  </button>
</section>
`;
